Refactor: namespaced the contents of src/

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,5 +20,5 @@ where = src
 
 [options.entry_points]
 console_scripts =
-  compile-env = src.commands:compile_env_files
-  make-config-template = src.commands:generate_blank_config
+  compile-env = compile_env_files.commands:compile_env_files
+  make-config-template = compile_env_files.commands:generate_blank_config
